--- a/cv.html
+++ b/cv.html
@@ -595,7 +595,7 @@
                                     <div class="subTitle">Awards</div>
                                     <ul>
                                         <li>
-                                            <span class="title">tescoplc.com</span>
+                                            <span class="title">Tesco PLC</span>
                                             <p>2012 Winner:</p>
                                             <p>Best Corporate Website</p>
                                             <p>(Digital Impact Awards)</p>                                      
